// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN-OPS — add mode writes exactly this op sequence > is byte-identical to today (normalized) 1`] = `
[
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:3>",
    "device_id": "device-1",
    "entity": "cohorts",
    "entity_id": "<uuid:0>",
    "field": "camp_id",
    "id": "<uuid:2>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:5>",
    "device_id": "device-1",
    "entity": "cohorts",
    "entity_id": "<uuid:0>",
    "field": "name",
    "id": "<uuid:4>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Main",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:8>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:6>",
    "field": "camp_id",
    "id": "<uuid:7>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:10>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:6>",
    "field": "name",
    "id": "<uuid:9>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Aleph",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:12>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:6>",
    "field": "sort_order",
    "id": "<uuid:11>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "0.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:15>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:13>",
    "field": "camp_id",
    "id": "<uuid:14>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:17>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:13>",
    "field": "name",
    "id": "<uuid:16>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Bet",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:19>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:13>",
    "field": "sort_order",
    "id": "<uuid:18>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:22>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:20>",
    "field": "camp_id",
    "id": "<uuid:21>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:24>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:20>",
    "field": "name",
    "id": "<uuid:23>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Bunk 1",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:26>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:20>",
    "field": "availability",
    "id": "<uuid:25>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "all",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:28>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:20>",
    "field": "tier_id",
    "id": "<uuid:27>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:6>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:31>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:29>",
    "field": "camp_id",
    "id": "<uuid:30>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:33>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:29>",
    "field": "name",
    "id": "<uuid:32>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Bunk 2",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:35>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:29>",
    "field": "availability",
    "id": "<uuid:34>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "all",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:37>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:29>",
    "field": "tier_id",
    "id": "<uuid:36>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:13>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:40>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:38>",
    "field": "camp_id",
    "id": "<uuid:39>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:42>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:38>",
    "field": "label",
    "id": "<uuid:41>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Monday",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:44>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:38>",
    "field": "day_of_week",
    "id": "<uuid:43>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:46>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:38>",
    "field": "sort_order",
    "id": "<uuid:45>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:49>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:47>",
    "field": "camp_id",
    "id": "<uuid:48>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:51>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:47>",
    "field": "label",
    "id": "<uuid:50>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Tuesday",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:53>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:47>",
    "field": "day_of_week",
    "id": "<uuid:52>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "2.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:55>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:47>",
    "field": "sort_order",
    "id": "<uuid:54>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "2.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:58>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:56>",
    "field": "camp_id",
    "id": "<uuid:57>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:60>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:56>",
    "field": "name",
    "id": "<uuid:59>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "09:00-09:40",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:62>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:56>",
    "field": "start_time",
    "id": "<uuid:61>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "09:00",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:64>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:56>",
    "field": "end_time",
    "id": "<uuid:63>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "09:40",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:66>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:56>",
    "field": "sort_order",
    "id": "<uuid:65>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "0.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:69>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:67>",
    "field": "camp_id",
    "id": "<uuid:68>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:71>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:67>",
    "field": "name",
    "id": "<uuid:70>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Block 2",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:73>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:67>",
    "field": "sort_order",
    "id": "<uuid:72>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:76>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:74>",
    "field": "camp_id",
    "id": "<uuid:75>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:78>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:74>",
    "field": "name",
    "id": "<uuid:77>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Swim",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:80>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:74>",
    "field": "min_per_week",
    "id": "<uuid:79>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "2.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:82>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:74>",
    "field": "max_per_week",
    "id": "<uuid:81>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "3.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:84>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:74>",
    "field": "priority",
    "id": "<uuid:83>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "high",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:86>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:74>",
    "field": "eligible_group_ids",
    "id": "<uuid:85>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "["<uuid:20>","<uuid:29>"]",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:89>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:87>",
    "field": "camp_id",
    "id": "<uuid:88>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:91>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:87>",
    "field": "name",
    "id": "<uuid:90>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Archery",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:93>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:87>",
    "field": "max_per_week",
    "id": "<uuid:92>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:95>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:87>",
    "field": "priority",
    "id": "<uuid:94>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "low",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:97>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:87>",
    "field": "eligible_group_ids",
    "id": "<uuid:96>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "["<uuid:20>"]",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:99>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:87>",
    "field": "min_per_week",
    "id": "<uuid:98>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:102>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:100>",
    "field": "camp_id",
    "id": "<uuid:101>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:104>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:100>",
    "field": "day_id",
    "id": "<uuid:103>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:38>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:106>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:100>",
    "field": "time_block_id",
    "id": "<uuid:105>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:56>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:108>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:100>",
    "field": "name",
    "id": "<uuid:107>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Mifkad",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:110>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:100>",
    "field": "is_all_groups",
    "id": "<uuid:109>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "0.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:112>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:100>",
    "field": "group_ids",
    "id": "<uuid:111>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "["<uuid:20>"]",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:115>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:113>",
    "field": "camp_id",
    "id": "<uuid:114>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:1>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:117>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:113>",
    "field": "day_id",
    "id": "<uuid:116>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:47>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:119>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:113>",
    "field": "time_block_id",
    "id": "<uuid:118>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:56>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:121>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:113>",
    "field": "name",
    "id": "<uuid:120>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Mifkad",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:123>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:113>",
    "field": "is_all_groups",
    "id": "<uuid:122>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "0.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:125>",
    "device_id": "device-1",
    "entity": "anchor_activities",
    "entity_id": "<uuid:113>",
    "field": "group_ids",
    "id": "<uuid:124>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "["<uuid:20>"]",
  },
]
`;

exports[`GOLDEN-OPS — replace mode writes exactly this op sequence > is byte-identical to today (normalized), teardown then create 1`] = `
[
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:2>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:0>",
    "field": "__deleted__",
    "id": "<uuid:1>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:5>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:3>",
    "field": "__deleted__",
    "id": "<uuid:4>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:8>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:6>",
    "field": "__deleted__",
    "id": "<uuid:7>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:11>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:9>",
    "field": "__deleted__",
    "id": "<uuid:10>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:14>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:12>",
    "field": "__deleted__",
    "id": "<uuid:13>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:18>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:15>",
    "field": "camp_id",
    "id": "<uuid:17>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:16>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:20>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:15>",
    "field": "name",
    "id": "<uuid:19>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Aleph",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:22>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:15>",
    "field": "sort_order",
    "id": "<uuid:21>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "0.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:24>",
    "device_id": "device-1",
    "entity": "tiers",
    "entity_id": "<uuid:15>",
    "field": "cohort_id",
    "id": "<uuid:23>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "co-seed",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:27>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:25>",
    "field": "camp_id",
    "id": "<uuid:26>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:16>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:29>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:25>",
    "field": "name",
    "id": "<uuid:28>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Bunk 1",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:31>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:25>",
    "field": "availability",
    "id": "<uuid:30>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "all",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:33>",
    "device_id": "device-1",
    "entity": "groups",
    "entity_id": "<uuid:25>",
    "field": "tier_id",
    "id": "<uuid:32>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:15>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:36>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:34>",
    "field": "camp_id",
    "id": "<uuid:35>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:16>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:38>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:34>",
    "field": "label",
    "id": "<uuid:37>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Monday",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:40>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:34>",
    "field": "day_of_week",
    "id": "<uuid:39>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:42>",
    "device_id": "device-1",
    "entity": "days_of_operation",
    "entity_id": "<uuid:34>",
    "field": "sort_order",
    "id": "<uuid:41>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:45>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:43>",
    "field": "camp_id",
    "id": "<uuid:44>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:16>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:47>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:43>",
    "field": "name",
    "id": "<uuid:46>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "09:00-09:40",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:49>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:43>",
    "field": "start_time",
    "id": "<uuid:48>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "09:00",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:51>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:43>",
    "field": "end_time",
    "id": "<uuid:50>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "09:40",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:53>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:43>",
    "field": "sort_order",
    "id": "<uuid:52>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "0.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:55>",
    "device_id": "device-1",
    "entity": "time_blocks",
    "entity_id": "<uuid:43>",
    "field": "cohort_id",
    "id": "<uuid:54>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "co-seed",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:58>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:56>",
    "field": "camp_id",
    "id": "<uuid:57>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "<uuid:16>",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:60>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:56>",
    "field": "name",
    "id": "<uuid:59>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "Swim",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:62>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:56>",
    "field": "min_per_week",
    "id": "<uuid:61>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "1.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:64>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:56>",
    "field": "max_per_week",
    "id": "<uuid:63>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "2.0",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:66>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:56>",
    "field": "priority",
    "id": "<uuid:65>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "high",
  },
  {
    "author_user_id": "u1",
    "client_write_id": "<uuid:68>",
    "device_id": "device-1",
    "entity": "activities",
    "entity_id": "<uuid:56>",
    "field": "eligible_group_ids",
    "id": "<uuid:67>",
    "parent_op_id": null,
    "timestamp": "<ts>",
    "value": "["<uuid:25>"]",
  },
]
`;
